<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoverdeclaro"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logouno" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Contra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fondoverdeclaro"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fondoverdeclaro"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/wa" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fondoverdeclaro"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gmail" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fondoverdeclaro"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ig" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="239dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border_rounded_"
        android:onClick="Registrate"
        android:text="@string/Bregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="239dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Blogin"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>